--- a/style.css
+++ b/style.css
@@ -759,7 +759,7 @@ height: 100%
 }
 
 /* contact */
-.contact{
+#contact{
     margin-top: 20px;
 /*     padding-left: 50px; */
 /*     position: relative; */
