--- a/style.css
+++ b/style.css
@@ -407,8 +407,9 @@ nav ul li a:hover::after{
 
 .experiences-list{
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-    grid-gap: 40px;
+    grid-template-columns: repeat(2, minmax(250px, 1fr));
+    grid-template-rows: repeat(2, minmax(150px, 1fr));
+    grid-gap: 10px;
     margin-top: 50px;
     margin-left: 25px;
     margin-right: 25px;
@@ -422,8 +423,10 @@ nav ul li a:hover::after{
 }
 
 .experiences-list ul li{
-    list-style: none;
-    margin-left: 20px;
+    /* list-style: none; */
+    margin-left: 0px;
+    list-style-type: disc;
+    padding: 3px;
 }
 
 .icon-1 {
@@ -457,7 +460,7 @@ nav ul li a:hover::after{
 
 .experiences-list div{
     background: #9e9a9a;
-    padding: 40px;
+    padding: 20px;
     font-size: 13 px;
     font-weight: 300;
     border-radius: 20px;
@@ -472,6 +475,7 @@ nav ul li a:hover::after{
     font-size: 30px;
     font-weight: 500;
     margin-bottom: 15px;
+    text-align: center;
 }
 
 .experiences-list div h4{
@@ -479,7 +483,7 @@ nav ul li a:hover::after{
     font-size: 20px;
     font-weight: 250;
     margin-bottom: 15px;
-    align-items: center;
+    text-align: center;
 }
 
 .experiences-list div:hover{
@@ -499,19 +503,18 @@ nav ul li a:hover::after{
 #portfolio{
     position: relative;
     height: 100%;
-    /* background: #eee; */
     font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
     font-size: 14px;
     color: var(--primary-color);
     margin: 0;
-    padding: 0;
+    padding: 10px 50px;
 }
 .swiper {
     width: 100%;
     /* height: 100%; */
   }
 
-  .swiper-slide {
+.swiper-slide {
     text-align: center;
     /* font-size: 24px; */
     background: #fff;
@@ -541,7 +544,7 @@ nav ul li a:hover::after{
 }
 .scb{
     width: 60%;
-    height: 60%;
+    /* height: 60%; */
 }
 .img{
 width: 100%;
@@ -550,25 +553,25 @@ display: block;
 /* transition: transform 0.5s; */
 }
 .swiper-slide{
-width: 100%;
-height: 100%;
-background: linear-gradient(rgba(0,0,0,0.6), var(--secondary-color));
-border-radius: 10px;
-overflow: hidden;
-display: flex;
-align-items: center;
-justify-content: center;
-flex-direction: column;
-transition: height 0.5s;
-font-weight: 500;
-margin-bottom: 20px;
-padding: 10 20px;
-text-align: center;
-overflow: hidden;
-display: flex;
-align-items: center;
-justify-content: center;
-flex-direction: column;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(rgba(0,0,0,0.6), var(--secondary-color));
+    border-radius: 10px;
+    overflow: hidden;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    transition: height 0.5s;
+    font-weight: 500;
+    margin-bottom: 20px;
+    padding: 10 20px;
+    text-align: center;
+    overflow: hidden;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
 }
 /* .swiper-slide:hover img{
 transform: scale(1.1);
@@ -763,12 +766,6 @@ height: 100%
 /* contact */
 #contact{
     margin-top: 20px;
-/*     padding-left: 50px; */
-/*     position: relative; */
-/*     width: 60%; */
-/*     animation: movedown 1s linear forwards; */
-/*     opacity: 0; */
-/*     background: rgba(220, 217, 217, 0.3) */
 }
 .contact-left{
     flex-basis: 35%;
@@ -850,7 +847,7 @@ form btn2{
 /* CSS for Small Screen */
 nav .fa-solid{
     display: none;
-}
+} 
 @media only screen and (max-width: 600px){
     #header{
         background-image: url(); /*Smaller Image*/
